--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,31 @@ ANTHROPIC_API_KEY=your_anthropic_key_here
 # Exa API key (for web search capabilities)
 EXA_API_KEY=your_exa_key_here
 
+# ===== E2B Code Execution & S3 Integration =====
+# E2B API key for sandbox code execution
+E2B_API_KEY=your_e2b_api_key_here
+
+# E2B template ID (custom template with S3 integration)
+E2B_TEMPLATE_ID=sentient-e2b-s3
+
+# E2B sandbox timeout in seconds (default: 300)
+E2B_TIMEOUT=300
+
+# AWS credentials for S3 integration in E2B sandbox
+AWS_ACCESS_KEY_ID=your_aws_access_key_here
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
+AWS_REGION=us-east-1
+
+# S3 bucket name for data persistence and sync
+S3_BUCKET_NAME=your-s3-bucket-name
+
+# ===== S3 Mounting Configuration =====
+# Enable S3 mounting across environments (true/false)
+S3_MOUNT_ENABLED=false
+
+# Universal mount directory path (identical across all platforms)
+S3_MOUNT_DIR=/opt/sentient
+
 # ===== Server Configuration (Optional) =====
 # Flask server host (default: 0.0.0.0)
 FLASK_HOST=0.0.0.0
@@ -28,6 +53,9 @@ FLASK_PORT=5000
 # ===== Logging Configuration (Optional) =====
 # Log level (TRACE, DEBUG, INFO, SUCCESS, WARNING, ERROR, CRITICAL)
 LOG_LEVEL=INFO
+
+# Log file mode: "w" to truncate on startup, "a" to append to existing file
+LOG_FILE_MODE=w
 
 # ===== Cache Configuration (Optional) =====
 # Cache directory path (default: .agent_cache)
