--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,12 @@ FROM ghcr.io/astral-sh/uv:python3.12-bookworm-slim AS backend
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
+    awscli \
+    s3fs \
     curl \
+    fuse \
+    jq \
+    util-linux \
     git \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
@@ -33,6 +38,14 @@ COPY sentient.yaml ./
 COPY emergency_backups/ ./emergency_backups/
 COPY project_results/ ./project_results/
 
+# Install goofys for high-performance S3 mounting
+RUN curl -L https://github.com/kahing/goofys/releases/latest/download/goofys -o /usr/local/bin/goofys \
+    && chmod +x /usr/local/bin/goofys
+
+# Copy startup script and make it executable
+COPY docker/startup.sh /usr/local/bin/startup.sh
+RUN chmod +x /usr/local/bin/startup.sh
+
 # Set Python path
 ENV PYTHONPATH=/app/src
 ENV FLASK_APP=sentientresearchagent.server.main
@@ -41,4 +54,4 @@ ENV FLASK_APP=sentientresearchagent.server.main
 EXPOSE 5000
 
 # Command to run the backend
-CMD ["uv", "run", "python", "-m", "sentientresearchagent"]
+CMD ["/usr/local/bin/startup.sh", "uv", "run", "python", "-m", "sentientresearchagent"]
