--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
 "pydantic>=2.11.4",
  "loguru>=0.7.3",
  "networkx>=3.4.2",
- "agno>=1.7",
+ "agno>=1.8",
  "duckduckgo-search>=8.0.1",
  "flask>=3.1.1",
  "Flask-CORS>=5.0.1",
@@ -31,8 +31,8 @@ dependencies = [
  "pyarrow>=16.1.0",
  "httpx>=0.27.0",
  "json-repair>=0.48.0",
- "e2b-code-interpreter<2.0.0",
- "e2b<2.0.0"
+ "e2b-code-interpreter>=2.0.0",
+ "e2b>=2.0.0"
 ]
 requires-python = ">=3.12"
 readme = "README.md"
