--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
 "pydantic>=2.11.4",
  "loguru>=0.7.3",
  "networkx>=3.4.2",
- "agno>=1.8",
+ "agno>=1.8,<2.0",
  "duckduckgo-search>=8.0.1",
  "flask>=3.1.1",
  "Flask-CORS>=5.0.1",
