配置 ROMA 支持自定义 Claude API
- 修改 docker-compose.yml: 将前端端口从 3000 改为 3001 避免冲突
- 更新 sentient.yaml: 配置使用 Anthropic provider 和自定义 base_url
- 支持通过环境变量 ANTHROPIC_API_KEY 和 ANTHROPIC_BASE_URL 配置

--- a/sentient.yaml
+++ b/sentient.yaml
@@ -3,8 +3,9 @@
 
 # LLM Infrastructure (used by your AgnoAgents)
 llm:
-  provider: "openrouter"  # Since you're using OpenRouter
-  api_key: "your-openrouter-key"  # Or OPENROUTER_API_KEY env var
+  provider: "anthropic"  # Using Anthropic via anyrouter.top
+  api_key: "${ANTHROPIC_API_KEY}"  # Use environment variable
+  base_url: "${ANTHROPIC_BASE_URL}"  # Use custom base URL
   timeout: 300.0  # Increased to 5 minutes for complex code execution and reasoning
   max_retries: 3
 
